--- a/Source/DotNet/cascades.yml
+++ b/Source/DotNet/cascades.yml
@@ -66,6 +66,6 @@ steps:
         git config --global user.email $(GitEmail)
         git config --global user.name $(GitUsername)
         git commit --allow-empty -m "Empty commit for pipeline trigger [Auto]"
-        git push https://dolittle-documentation:$(CascadingBuild)@github.com/dolittle/Documentation.git --all
+        git push https://$(GitUsername):$(CascadingBuild)@github.com/"$item".git --all
       done
     displayName: Trigger new pipeline ( $REPO )
