--- a/Source/DotNet/cascades.yml
+++ b/Source/DotNet/cascades.yml
@@ -28,6 +28,7 @@ steps:
 
   - task: DotNetCoreCLI@2
     displayName: Build release
+    condition: always()
     inputs:
       command: build
       projects: 'Source/**/*.csproj'
@@ -43,6 +44,7 @@ steps:
 
   - task: DotNetCoreCLI@2
     displayName: Packing
+    condition: always()
     inputs:
       command: 'pack'
       outputDir: '$(Build.ArtifactStagingDirectory)'
@@ -56,7 +58,8 @@ steps:
       
 
   - publish: $(Build.ArtifactStagingDirectory)
-    artifact: NugetPack  
+    artifact: NugetPack
+    condition: always()
 # Trigger a new pipeline by changing a file
   - bash: |
       for item in ${{ parameters.CASCADES }}
