--- a/Source/DotNet/cascades.yml
+++ b/Source/DotNet/cascades.yml
@@ -21,38 +21,6 @@ steps:
 #      artifactName: 'NugetPack'
 #      downloadPath: '$(Build.ArtifactStagingDirectory)'
 
-# DotnetCore functions
-  - task: DotNetCoreCLI@2
-    displayName: Restore from nuget
-    inputs:
-      command: 'restore'
-      feedsToUse: 'select'
-      versioningScheme: 'off'
-      nuGetFeedType: 'internal'
-      nugetConfigPath: $(Build.ArtifactStagingDirectory)
-
-
-  - task: DotNetCoreCLI@2
-    displayName: Build release
-    inputs:
-      command: build
-      projects: 'Source/**/*.csproj'
-      arguments: '--configuration ${{ parameters.buildConfiguration }}' # Update this to match your need
-      packagesDirectory: $(Build.ArtifactStagingDirectory)
-  
-  - task: DotNetCoreCLI@2
-    displayName: Run Tests
-    inputs:
-      command: test
-      projects: 'Specifications/**/*.csproj'
-      arguments: '--configuration ${{ parameters.buildConfiguration }}'
-
-  - task: DotNetCoreCLI@2
-    displayName: Packing
-    inputs:
-      command: 'pack'
-      outputDir: '$(Build.ArtifactStagingDirectory)'
-
 #  - task: DotNetCoreCLI@2
 #    displayName: Push release
 #    inputs:
@@ -63,7 +31,8 @@ steps:
 
   - publish: $(Build.ArtifactStagingDirectory)
     artifact: NugetPack
-# Trigger a new pipeline by changing a file
+    
+# Trigger a new pipeline with empty commit
   - bash: |
       for item in ${{ parameters.CASCADES }}
       do
