--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -53,8 +53,12 @@ jobs:
     inputs:
       command: 'pack'
       outputDir: '$(Build.ArtifactStagingDirectory)'
+      
+  - script: |
+            export LABEL=$(curl https://api.github.com/repos/$REPO/pulls\?state\=all | tr ',' '\n' | grep name | head -1 | cut -d ":" -f 2 | tr -d '"')
 
   - template: cascades.yml
+    condition: ne("$(LABEL)", "major")
     parameters:
       CASCADES: ${{ parameters.CASCADES }}
 
