--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -58,7 +58,7 @@ jobs:
             export LABEL=$(curl https://api.github.com/repos/$REPO/pulls\?state\=all | tr ',' '\n' | grep name | head -1 | cut -d ":" -f 2 | tr -d '"')
 
   - template: cascades.yml
-    condition: ne("$(LABEL)", "major")
+    condition: ne($(LABEL), 'major')
     parameters:
       CASCADES: ${{ parameters.CASCADES }}
 
