--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -58,9 +58,9 @@ jobs:
       export LABEL=$(curl https://api.github.com/repos/$REPO/pulls\?state\=all | tr ',' '\n' | grep name | head -1 | cut -d ":" -f 2 | tr -d '"')
 
   - template: cascades.yml
-    condition: always()
     parameters:
       CASCADES: ${{ parameters.CASCADES }}
+    condition: ne($(LABEL), 'major')
 
 - job: 'Versioning'
   pool: Default
