--- a/Source/DotNet/cascades.yml
+++ b/Source/DotNet/cascades.yml
@@ -47,4 +47,4 @@ steps:
         git push https://$(GitUsername):$(CascadingBuild)@github.com/"$item".git --all
       done
     displayName: Trigger new pipeline ( switching repository )
-    condition: ne("$(LABEL)", 'major')
+    condition: ne($LABEL, 'major')
