--- a/Source/DotNet/cascades.yml
+++ b/Source/DotNet/cascades.yml
@@ -6,12 +6,12 @@ parameters:
 
 steps:
 
-#  - task: DotNetCoreCLI@2
-#    displayName: Push release
-#    inputs:
-#      command: push
-#      searchPatternPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
-#      feedPublish: 'put here the Nuget service connection'
+  - task: DotNetCoreCLI@2
+    displayName: Push release
+    inputs:
+      command: push
+      searchPatternPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
+      feedPublish: 'nuget_credential'
       
 
   - publish: $(Build.ArtifactStagingDirectory)
