--- a/Source/DotNet/cascades.yml
+++ b/Source/DotNet/cascades.yml
@@ -6,13 +6,13 @@ parameters:
 
 steps:
 
-#  - task: DotNetCoreCLI@2
-#    displayName: Push release
-#    inputs:
-#      command: push
-#      nugetFeedType: 'external'
-#      searchPatternPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
-#      externalEndPoint: 'nuget_credential'
+  - task: DotNetCoreCLI@2
+    displayName: Push release
+    inputs:
+      command: nuget push
+      nugetFeedType: 'external'
+      searchPatternPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
+      externalEndPoint: 'nuget_credential'
       
 
   - publish: $(Build.ArtifactStagingDirectory)
