--- a/Source/TypeScript/release.yml
+++ b/Source/TypeScript/release.yml
@@ -7,78 +7,62 @@ variables:
 - group: global-var-pipelines
 
 steps:
--  bash: |
-      URL=$(Build.Repository.Uri)
-      COMMIT_SHA=$(Build.SourceVersion)
-      BRANCH=$(Build.SourceBranch) 
-      REPO=`echo "$URL" | awk -F ".com/" '{ print $2 }'`
-      BRANCH=$(echo $BRANCH | cut -d "/" -f 3)
-      if [ "$BRANCH" = "master" ]
-      then
-          MERGED_PR_JSON=$(curl https://api.github.com/repos/$REPO/pulls\?state\=all | jq '.[] | select(.merge_commit_sha=="'$COMMIT_SHA'")')
-          LABELS=$(echo $MERGED_PR_JSON | jq '.labels | .[] | .name' -r)
-          MAJOR_LABEL=$(echo "$LABELS" | grep -E '^major$')
-          MINOR_LABEL=$(echo "$LABELS" | grep -E '^minor$')
-          PATCH_LABEL=$(echo "$LABELS" | grep -E '^patch$')
-          echo "Got labels:"
-          echo "$LABELS"
-          echo "Getting version tag"
-          TAG_REFS=$(git -c 'versionsort.suffix=-' ls-remote -t --refs --sort=-v:refname)
-          while [ ! "$TAG_REFS" ]
-          do
-              sleep 1
-          done
-          VERSION=$(echo $TAG_REFS | grep -o -E "refs/tags/\S+" | grep -o -e "[0-9]\+\.[0-9]\+\.[0-9]\+" | head -1) # About 2 hours spent here, grep on my machine and this did not behave the same given the same input...
-          NEW_PROJECT=false
-          if [ ! "$VERSION" ]
-          then
-              NEW_PROJECT=true
-              VERSION=1.0.0
-              echo "No version tag found. Setting version to $VERSION"
-          fi
-          MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
-          MINOR=`echo $VERSION | awk -F "." '{print $2}'`
-          PATCH=`echo $VERSION | awk -F "." '{print $3}'`
-          SHOULD_PUBLISH=false
+- template: ../Versioning/handle_version.yml
+- bash: |
+    if [ "$(Version)" != "empty" ]
+    then
+        URL=$(Build.Repository.Uri)
+        BRANCH=$(Build.SourceBranch) 
+        REPO=`echo "$URL" | awk -F ".com/" '{ print $2 }'`
+        BRANCH=$(echo $BRANCH | cut -d "/" -f 3)
+        
+        git config user.name \"$GIT_USERNAME\"
+        git config user.email \"$GIT_EMAIL\"
 
-          if [ "$MAJOR_LABEL" = "major" ] || [ "$MINOR_LABEL" = "minor" ] || [ "$PATCH_LABEL" = "patch" ]
-          then
-              SHOULD_PUBLISH=true
-          fi
-          
-          if [ "$MAJOR_LABEL" = "major" ] && [ "$NEW_PROJECT" = false ]
-          then
-              echo "New major release"
-              MAJOR=$((MAJOR+1))
-              MINOR="0"
-              PATCH="0"
+        echo Triggering new release of version "$(Version)"
+        
+        echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
+        echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > ~/.npmrc
 
-          elif [ "$MINOR_LABEL" = "minor" ] && [ "$NEW_PROJECT" = false ]
-          then
-              echo "New minor release"
-              MINOR=$((MINOR+1))
-              PATCH="0"
-          elif [ "$PATCH_LABEL" = "patch" ] && [ "$NEW_PROJECT" = false ]
-          then
-              echo "New patch release"
-              PATCH=$((PATCH+1))
-          fi
-          if [ "$SHOULD_PUBLISH" = true ]
-          then
-              echo "Triggering new release"
-              echo //registry.npmjs.org/:_authToken="$NPM_TOKEN" > .npmrc
-              ROOT_JSON=$(jq )
-              WORKSPACES=$(jq '.workspaces' package.json)
-              
-          else
-              echo "No label triggering new version"
-          fi
-      fi
-      echo "End of script"
-   displayName: Handling release
-   env:
-     NPM_TOKEN: $(NpmToken)
+        WORKSPACES=$(jq '.workspaces' package.json)
+        if [ "$WORKSPACES" = null ]
+        then
+            echo Releasing single package
+            JSON=$(jq -r -e --arg ver $(Version) '.version = $ver' package.json)
+            echo "$JSON" > package.json
+            git add package.json
+            npm publish
+            git commit -m "Increment version"
+            git push https://$GIT_USERNAME:$PAT@github.com/$REPO HEAD:$BRANCH
 
--  script: yarn run publish
-   displayName: Publishing
-    
+            git tag -d $(Version) && git tag $(Version)
+            git push https://$GIT_USERNAME:$PAT@github.com/$REPO :$(Version)
+            git push https://$GIT_USERNAME:$PAT@github.com/$REPO $(Version)
+        else
+            echo "Releasing multiple packages"
+            for package in Source/*/package.json
+            do
+                echo "$package"
+                JSON=$(jq -r -e --arg ver $(Version) '.version = $ver' ./"$package")
+                echo "$JSON" > ./"$package"
+                dir=$(dirname "$package")
+                git add ./"$package"
+                npm publish ./"$dir"   
+            done
+
+            git commit -m "Increment versions"
+            git push https://$GIT_USERNAME:$PAT@github.com/$REPO HEAD:$BRANCH
+
+            git tag -d $(Version) && git tag $(Version)
+            git push https://$GIT_USERNAME:$PAT@github.com/$REPO :$(Version)
+            git push https://$GIT_USERNAME:$PAT@github.com/$REPO $(Version)
+        fi
+    else
+        echo "No new version to release"
+    fi
+    displayName: Handling release
+    env:
+      NPM_TOKEN: $(NpmToken)
+      GIT_USERNAME: $(GitUsername)
+      GIT_EMAIL: $(GitEmail)
+      PAT: $(CascadingBuild)
