--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -53,6 +53,14 @@ jobs:
     inputs:
       command: 'pack'
       outputDir: '$(Build.ArtifactStagingDirectory)'
+      
+  - task: DotNetCoreCLI@2
+    displayName: Push release
+    inputs:
+      command: push
+      nugetFeedType: 'external'
+      searchPatternPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
+      externalEndPoint: 'nuget_credential'
 
   - template: cascades.yml
     parameters:
