--- a/Source/Versioning/commit_version_tag.yml
+++ b/Source/Versioning/commit_version_tag.yml
@@ -20,7 +20,7 @@ steps:
     }
     main () {
         setup
-        VERSION="$(Version)"
+        VERSION="$(NEW_VERSION)"
         echo "$VERSION"
         if [ "$VERSION" != "empty" ]
         then
