--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -62,7 +62,7 @@ jobs:
 
 - job: 'Release'
   pool: Default
-  dependsOn: 'Versioning'
+  dependsOn: 'DotNetCore_Build'
   condition: succeeded()
   variables:
   - group: global-var-pipelines
