--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -81,7 +81,7 @@ jobs:
     inputs:
       command: push
       nugetFeedType: 'external'
-      packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
+      packagesToPush: '$(Build.ArtifactStagingDirectory)/NugetPack/*.nupkg'
       publishFeedCredentials: 'nuget_credential'
 
 
