--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -85,7 +85,7 @@ jobs:
     inputs:
       command: push
       nugetFeedType: 'external'
-#      packagesToPush: ' $(Pipeline.Workspace)/**/*.nupkg'
+      packagesToPush: ' $(Pipeline.Workspace)/**/*.nupkg'
       publishFeedCredentials: 'myget_mathieu'
 
 
