--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -83,6 +83,7 @@ jobs:
   
   - task: NuGetCommand@2
     displayName: Push Nuget packs
+    condition: and(succeeded(), ne(dependencies.DotNetCore_Build.outputs['set_version.Version'], ''))
     inputs:
       command: push
       nugetFeedType: 'external'
